--- a/Images/Gallery/nav_bar.css
+++ b/Images/Gallery/nav_bar.css
@@ -6,9 +6,7 @@ nav {
     left: 0;
     right: 0;
     z-index: 100;
-    /* background: radial-gradient(#fff 20%, transparent 80%); */
-    backdrop-filter: blur(20px);
-    -webkit-backdrop-filter: blur(20px);
+    background: radial-gradient(#fff 20%, transparent 80%);
 }
 
 nav ul {
@@ -29,6 +27,7 @@ nav a {
     font-family: 'Header';
     transition: color 0.3s;
     width: 130px;
+    justify-content: center;
 }
 
 nav li:last-child a {
@@ -56,29 +55,19 @@ nav a:hover {
 
 @media (max-width: 1300px) {
     nav {
-        padding: 0px;
-        background: unset;
-        backdrop-filter: unset;
-        -webkit-backdrop-filter: unset;
-        height: 100%;
-        width: 100%;
+        padding: 50%;
+        background: none;
     }
-    
+
     nav ul {
-        display: none;
+        display: none; /* Hide the navigation links by default */
         flex-direction: column;
-        position: fixed;
-        top: 50%;
+        position: absolute;
         left: 0;
         right: 0;
         background: #fff;
-        margin: 0;
-        padding-block: 100%;
-        transform: translateY(-50%); /* Center the options on any small screen */
-    }
-
-    .show-menu {
-        display: block; /* Show the dropdown when the "menu" button is clicked */
+        padding-block: 40px;
+        margin: 0px;
     }
 
     #menu-button {
@@ -88,24 +77,24 @@ nav a:hover {
         padding: 0px;
         cursor: pointer;
         position: fixed;
-        bottom: 30px;
+        top: 30px;
         right: 30px;
         z-index: 1000;
     }
     
     #menu-button i {
-        color: rgba(92, 84, 66, 0.5);
+        color: rgba(92, 84, 66, 0.8);
         font-size: 2rem;
     }
 
+    .show-menu {
+        display: block; /* Show the dropdown when the "menu" button is clicked */
+    }
 
     nav a {
         width: 100%; /* Full width for dropdown links */
         block-size: 60px;
-        font-size: 2rem;
-        text-align: center; /* Center the text */
-        line-height: 60px;
-        padding-block: 10px;
+        font-size: 2.5rem;
     }
 
     nav li:last-child a {
@@ -113,8 +102,6 @@ nav a:hover {
         color: #fff;
         border-radius: 8px;
         margin-inline: auto;
-        margin-top: 30px;
-        padding-block: 0px;
         width: 30%;
         transition: background-color 0.3s;
     }
