--- a/Styles/home.css
+++ b/Styles/home.css
@@ -1,78 +1,65 @@
 #home {
-    height: calc(100vh - 300px); /* Shrink the bottom of the image up */
-    background-image: url('../Images/home.JPG');
+    display: flex;
+    height: calc(100vh - 250px);
+    background-image: url('../Images/home1.JPG');
     background-size: cover;
     background-repeat: no-repeat;
     background-attachment: fixed;
-    background-position: center 180%;
+    background-position: center 120%;
     border: 40px solid #fff;
-}
-
-#home h1, #home h2 {
-    opacity: 0;
-    color: #fff;
-    font-family: 'Header';
-    letter-spacing: 10px;
+    justify-content: center;
+    align-items: center;
 }
 
 #home h1 {
-    white-space: pre;
+    opacity: 0; /* Hide the elements */
     transition: opacity 2s ease-in-out 2s;
+    color: #fff;
+    letter-spacing: 10px;
+    font-family: 'Header';
     font-size: 4rem;
-    text-align: right;
-    text-shadow: 0 0 20px rgba(111,128,124, 0.7);
-    position: absolute;
-    top: 40px;
-    right: 140px;
-    padding: 0;
+    font-weight: 400;
+    text-align: center;
     margin: 0;
 }
 
-#home h2 {
-    transition: opacity 2s ease-in-out 2s;
-    font-size: 2rem;
-    text-align: right;
-    text-shadow: 0 0 20px rgba(111,128,124, 1);
-    position: absolute;
-    bottom: 340px;
-    right: 140px;
-}
-
-#home.h1-visible h1, #home.h2-visible h2 {
-    opacity: 1; /* Show the elements */
-}
-
-.and-font {
+#home .and-font {
     font-family: 'And';
     font-size: 2rem;
 }
 
+#home .date {
+    font-size: 1.5rem;
+    font-weight: 400;
+}
+
+#home.h1-visible h1 {
+    opacity: 1; /* Show the elements */
+}
+
 /* -------------------------- Smaller devices ----------------------------*/
 
-@media (max-width: 500px) {
+@media (max-width: 1300px) {
     #home {
-        border: 0px;
-        border-radius: 0px;
-        background-position: 48.5% center;
         height: 100vh;
+        background-image: url('../Images/home2.JPG');
+        background-position: center center;
+        transform: scale(1);
+        border: 0;
     }
 
     #home h1 {
-        font-size: 5rem;
-        margin: 0px;
-        padding-top: 30px;
-        padding-inline: 20px;
-        text-align: center;
+        font-size: 3rem;
+        font-weight: 550;
+        padding-bottom: 80px;
     }
 
-    #home h2 {
-        font-size: 3.5rem;
-        text-align: center;
-        position: absolute;
-        bottom: 30px;
-        left: 0;
-        right: 0;
-        margin: 0px;
-        padding: 0px;
+    #home .and-font {
+        font-size: 1.3rem;
+    }
+
+    #home .date {
+        font-size: 1.2rem;
+        font-weight: 500;
     }
 }
