--- a/Styles/registry.css
+++ b/Styles/registry.css
@@ -1,13 +1,13 @@
-#rsvp {
+#registry {
     display: flex;
     flex-direction: column;
     align-items: center;
-    background-color: #fefbf0;
+    background-color: #fff;
     padding: 40px;
     padding-bottom: 20px;
 }
 
-#rsvp h2 {
+#registry h2 {
     color: #5c5442;
     font-size: 4rem;
     font-family: 'Header';
@@ -17,16 +17,17 @@
     text-align: center;
 }
 
-#rsvp .rsvp-container {
+#registry .registry-container {
     margin: auto;
 }
 
-#rsvp .rsvp-container p {
+#registry .registry-container p {
     font-size: 1.3rem;
     line-height: 25pt;
     font-family: 'header';
     color: #5c5442;
     text-align: center;
+    width: 50%;
     padding: 20px;
     margin: 0 auto;
     margin-block: 40px;
@@ -34,12 +35,12 @@
     background-color: #fff;
 }
 
-#rsvp .rsvp-button-container {
+#registry .registry-button-container {
     display: flex;
     justify-content: center;
 }
 
-#rsvp .rsvp-button {
+#registry .registry-button {
     background-color: rgba(168, 60, 6, 0.6);
     color: #fff;
     border: none;
@@ -51,27 +52,27 @@
     transition: background-color 0.3s;
 }
 
-#rsvp .rsvp-button:hover {
+#registry .registry-button:hover {
     background-color: #a83c06;
 }
 
 /* -------------------------- Smaller devices -------------------------- */
 
 @media (max-width: 1300px) {
-    #rsvp {
+    #registry {
         padding: 10px;
         padding-block: 35px;
     }
 
-    #rsvp h2 {
+    #registry h2 {
         font-size: 3rem;
     }
 
-    #rsvp .rsvp-container {
+    #registry .registry-container {
         padding: 0;
     }
     
-    #rsvp .rsvp-container p {
+    #registry .registry-container p {
         font-size: 1rem;
         line-height: 18pt;
         padding: 10px;
