--- a/Styles/story.css
+++ b/Styles/story.css
@@ -1,7 +1,23 @@
 #story {
+    background-color: #fefaee;
     display: flex;
-    background-color: #f2efe8;
     padding: 40px;
+    padding-bottom: 0;
+    justify-content: space-evenly;
+}
+
+#story img {
+    max-height: 650px;
+    border-top-left-radius: 220px 220px;
+    border-top-right-radius: 220px 220px;
+    filter: brightness(130%);
+}
+
+#story .story-container {
+    width: 60%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
 }
 
 #story h2 {
@@ -10,73 +26,47 @@
     font-family: 'Header';
     letter-spacing: 10px;
     margin: 0;
-    padding-top: 60px;
-    padding-bottom: 60px;
-}
-
-.story-container {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    flex: 1; /* Allow the content to take the available space */
+    margin-bottom: 20px;
     padding: 0;
+    text-align: center;
 }
 
-.story-container p {
-    font-size: 1.2rem;
+#story .story-container p {
+    font-size: 1.3rem;
+    line-height: 25pt;
     font-family: 'header';
+    text-align: center;
     color: #5c5442;
-    max-width: 90%;
-    margin: 20px;
+    margin: 0px;
     padding: 20px;
-    box-shadow: 0 0 10px rgba(167, 77, 0, 0.8);
-    background-color: #fdfcfa;
+    box-shadow: 0 0 10px rgba(168, 60, 6, 0.8);
+    background-color: #fff;
 }
 
-.arch-frame {
-    max-width: 28%;
-    border-top-left-radius: 220px 220px;
-    border-top-right-radius: 220px 220px;
-    margin: auto auto;
-    padding: 20px;
-}
+/* -------------------------- Smaller devices ----------------------------*/
 
-.top-blurred-bar {
-    position: absolute;
-    width: 100%;
-    background: linear-gradient(#fff, #f2efe8);
-    height: 20px;
-}
-
-.bottom-blurred-bar {
-    position: absolute;
-    width: 100%;
-    background: linear-gradient(#f2efe8, #fff);
-    height: 20px;
-}
-
-@media (max-width: 500px) {
+@media (max-width: 1300px) {
     #story {
         padding: 10px;
+        padding-top: 35px;
+        justify-content: unset;
+    }
+
+    #story img {
+        display: none;
+    }
+
+    #story .story-container {
+        width: 100%;
     }
 
     #story h2 {
-        padding-top: 0px;
-        font-size: 3.5rem;
-        margin-bottom: 0px;
-        text-align: center;
+        font-size: 3rem;
     }
 
-    #story p {
-        font-size: 1.4rem; 
-        max-width: 100%; 
-        text-align: center;
-        margin: 10px;
-        border: 1px solid #a74d00;
-        border-left: 2px solid #a74d00;
-    }
-
-    .arch-frame {
-        display: none;
+    #story .story-container p {
+        font-size: 1rem;
+        line-height: 18pt;
+        padding: 10px;
     }
 }
