--- a/Styles/other.css
+++ b/Styles/other.css
@@ -14,10 +14,11 @@
 
 footer {
     color: #5c5442;
-    background-color: #fefaee;
+    background-color: #fff;
     text-align: left;
     padding: 10px;
 }
+
 
 /* ---------- Font CSS ---------- */
 
