--- a/Styles/info.css
+++ b/Styles/info.css
@@ -61,10 +61,20 @@
     margin: 20px;
 }
 
-#info .location-container iframe {
-    flex: 2; 
+#info .google-maps {
+    position: relative;
+    overflow: hidden;
+    flex: 2;
+    margin-block: 20px;
+    margin-right: 20px;
+}
+
+#info iframe {
+    z-index: 100;
+    position: absolute;
+    width: 100% !important;
+    height: 100% !important;
     border: 0;
-    margin: 20px;
 }  
 
 /* -------------------------- Itinerary -------------------------- */
@@ -108,20 +118,33 @@
 }
 
 #info .quadrant {
-    margin: 20px;
-    margin-inline: auto;
+    display: flex;
+    flex-direction: column;
+    align-items: center; /* Center text horizontally */
     text-align: center;
     font-family: 'header';
     font-size: 1.3rem;
     color: #5c5442;
+    width: 325px;
+    padding: 20px;
+    margin: 0;
 }
 
-#info .hotels {
-    text-decoration: none;
+#info .hotels-button {
+    z-index: 100;
+    width: 100%;
+    font-family: 'header';
+    background-color: #fff;
     color: #5c5442;
+    border: none;
+    padding: 10px 20px;
+    margin: 5px;
+    cursor: pointer;
+    font-size: 1rem;
+    transition: background-color 0.3s;
 }
 
-#info .hotels:hover {
+#info .hotels-button:hover {
     color: #a83c06;
     font-weight: bolder;
 }
@@ -188,12 +211,12 @@
         margin: 0;
     }
 
-    #info .location-container iframe {
-        height: 300px;
-        width: 100%;
+    #info .google-maps {
+        flex: unset;
         margin: 0;
         margin-top: 10px;
-    }  
+        height: 300px;
+    }
 
     /* -------------------------- Itinerary -------------------------- */
 
@@ -214,11 +237,9 @@
     }
 
     #info .quadrant {
-        width: 350px;
         font-size: 1rem;
         padding: 0;
-        margin: 10px;
-        margin-block: 25px;
+        padding-top: 40px;
     }
 
     #info .note {
