--- a/Styles/nav_bar.css
+++ b/Styles/nav_bar.css
@@ -1,12 +1,11 @@
 nav {
+    z-index: 100;
     position: fixed;
     padding: 0px;
     margin: 0px;
     top: 0;
     left: 0;
     right: 0;
-    z-index: 100;
-    /* background: radial-gradient(#fff 20%, transparent 80%); */
     backdrop-filter: blur(20px);
     -webkit-backdrop-filter: blur(20px);
 }
@@ -57,7 +56,7 @@ nav a:hover {
 @media (max-width: 1300px) {
     nav {
         padding: 0px;
-        background: unset;
+        background: transparent;
         backdrop-filter: unset;
         -webkit-backdrop-filter: unset;
         height: 100%;
@@ -83,7 +82,7 @@ nav a:hover {
 
     #menu-button {
         display: block;
-        background-color: transparent;
+        background-color: unset;
         border: none;
         padding: 0px;
         cursor: pointer;
