--- a/Styles/home.css
+++ b/Styles/home.css
@@ -12,17 +12,17 @@
 }
 
 #home h1 {
-    opacity: 0; /* Hide the elements */
-    transition: opacity 2s ease-in-out 2s;
+    font-family: 'Header';
     color: #fff;
     letter-spacing: 10px;
-    font-family: 'Header';
     font-size: 4.5rem;
     font-weight: 400;
-    margin: 0;
     text-align: center;
-    padding-right: 50px;
+    transition: opacity 5s ease-in-out 0s;
     text-shadow: 0px 0px 30px rgba(60, 69, 75, 1);
+    opacity: 0; /* Hide the elements */
+    padding-right: 50px;
+    margin: 0;
 }
 
 #home .and-font {
@@ -41,41 +41,52 @@
     font-size: 2rem;
     font-weight: 400;
     padding-block: 12px;
+    margin: 0;
 }
 
 #home.h1-visible h1 {
     opacity: 1; /* Show the elements */
 }
 
-/* -------------------------- Smaller devices ----------------------------*/
+.home-phone-img {
+    display: none;
+}
 
 @media (max-width: 1300px) {
     #home {
         height: 100vh;
-        background-image: url('../Images/home2.JPG');
-        background-position: center center;
-        justify-content: center;
-        transform: scale(1);
+        position: relative;
+        background-image: none;
+        align-items: unset;
         border: 0;
     }
 
+    .home-phone-img {
+        display: block;
+        width: 100%;
+        height: auto;
+    }
+
     #home h1 {
+        position: absolute;
         font-size: 3rem;
-        font-weight: 550;
+        text-align: center;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -60%); /* Center the text */
         padding: 0;
-        padding-bottom: 80px;
     }
 
     #home .and-font {
-        font-size: 1.3rem;
+        font-size: 2rem;
     }
 
     #home #countdown {
         font-size: 1.3rem;
+        width: max-content;
     }
 
     #home .date {
         font-size: 1.2rem;
-        font-weight: 500;
     }
 }
