--- a/Styles/info.css
+++ b/Styles/info.css
@@ -39,6 +39,22 @@
     display: none;
 }
 
+/* -------------------------- Dress Code -------------------------- */
+
+#info .color-container {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    margin-bottom: 40px;
+}
+
+#info .color-quadrant {
+    width: 100px;
+    height: 100px;
+    border-radius: 50%;
+    margin-inline: 20px;
+}
+
 /* -------------------------- Location Info -------------------------- */
 
 #info .location-container {
@@ -117,16 +133,16 @@
     margin: 20px;
 }
 
-#info .quadrant {
+#info .lodge-quadrant {
     display: flex;
     flex-direction: column;
     align-items: center; /* Center text horizontally */
     text-align: center;
     font-family: 'header';
-    font-size: 1.3rem;
     color: #5c5442;
     width: 325px;
-    padding: 20px;
+    padding-inline: 20px;
+    padding-block: 5px;
     margin: 0;
 }
 
@@ -140,7 +156,7 @@
     padding: 10px 20px;
     margin: 5px;
     cursor: pointer;
-    font-size: 1rem;
+    font-size: 1.3rem;
     transition: background-color 0.3s;
 }
 
@@ -157,10 +173,6 @@
     margin-bottom: 20px;
 }
 
-/* -------------------------- Wedding party -------------------------- */
-
-
-
 /* -------------------------- Smaller devices -------------------------- */
 
 @media (max-width: 1300px) {
@@ -175,7 +187,6 @@
     }
 
     #info h3 {
-        display: block;
         text-align: center;
         font-size: 1.6rem;
         padding-top: 30px;
@@ -194,6 +205,17 @@
     
     #info .small-screen {
         display: block;
+    }
+
+    /* -------------------------- Dress Code -------------------------- */
+
+    #info .color-container {
+        margin: 0;
+    }
+
+    #info .color-quadrant {
+        margin-inline: 10px;
+        margin-top: 10px;
     }
 
     /* -------------------------- Location Info -------------------------- */
@@ -236,18 +258,18 @@
         margin: 0;
     }
 
-    #info .quadrant {
+    #info .lodge-quadrant {
         font-size: 1rem;
         padding: 0;
-        padding-top: 40px;
+        padding-top: 10px;
+    }
+
+    #info .hotels-button {
+        font-size: 1rem;
     }
 
     #info .note {
         margin: 0;
-        margin-top: 20px;
+        margin-block: 10px;
     }
-
-    /* -------------------------- Wedding party -------------------------- */
-
-    
 }
