--- a/Styles/info.css
+++ b/Styles/info.css
@@ -7,44 +7,32 @@
 }
 
 #info h2 {
-    color: #5c5442;
-    font-size: 4rem;
     font-family: 'Header';
+    color: #5c5442;
+    text-align: right;
+    font-size: 4rem;
     letter-spacing: 10px;
     margin: 0;
     padding: 0;
-    text-align: right;
 }
 
 #info h3 {
-    color: #5c5442;
-    font-size: 2.5rem;
     font-family: 'Header';
+    color: #5c5442;
+    text-align: left;
+    font-size: 2.5rem;
     letter-spacing: 10px;
     margin: 0;
     padding: 0;
-    text-align: left;
 }
 
-#info .location-name {
-    font-size: 1.2rem;
-    letter-spacing: normal;
-}
-
-#info .large-screen {
-    display: block;
-}
-
-#info .small-screen {
-    display: none;
-}
-
-/* -------------------------- Dress Code -------------------------- */
+/* -------------------------- Color Code -------------------------- */
 
 #info .color-container {
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
+    margin: 20px;
     margin-bottom: 40px;
 }
 
@@ -52,7 +40,7 @@
     width: 100px;
     height: 100px;
     border-radius: 50%;
-    margin-inline: 20px;
+    margin-inline: 30px;
 }
 
 /* -------------------------- Location Info -------------------------- */
@@ -61,12 +49,12 @@
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
-    margin-bottom: 40px;
+    margin-bottom: 20px;
 }
 
 #info .location-container p {
     flex: 1;
-    font-family: 'header';
+    font-family: 'Header';
     font-size: 1.3rem;
     color: #5c5442;
     text-align: center;
@@ -93,12 +81,61 @@
     border: 0;
 }  
 
+/* -------------------------- Lodging -------------------------- */
+
+#info .lodging-container {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    margin: 20px;
+}
+
+#info .lodge-quadrant {
+    display: flex;
+    flex-direction: column;
+    align-items: center; /* Center text horizontally */
+    text-align: center;
+    font-family: 'Header';
+    color: #5c5442;
+    width: 325px;
+    padding: 0;
+    padding-inline: 20px;
+    margin: 0;
+}
+
+#info .hotels-button {
+    z-index: 100;
+    font-family: 'Header';
+    background-color: #fff;
+    color: #5c5442;
+    font-size: 1.3rem;
+    transition: background-color 0.3s;
+    cursor: pointer;
+    border: none;
+    width: 100%;
+    padding: 10px 20px;
+    margin: 5px;
+}
+
+#info .hotels-button:hover {
+    color: #a83c06;
+    font-weight: bolder;
+}
+
+#info .note {
+    font-family: 'Header';
+    color: #5c5442;
+    text-align: center;
+    margin: 0;
+    margin-bottom: 40px;
+}
+
 /* -------------------------- Itinerary -------------------------- */
 
 #info table {
     border-collapse: collapse;
     margin: 20px;
-    margin-bottom: 60px;
+    margin-bottom: 40px;
 }
 
 #info th, #info td {
@@ -122,55 +159,6 @@
 
 #info tr:hover {
     background-color: rgba(168, 60, 6, 0.1);
-}
-
-/* -------------------------- Lodging -------------------------- */
-
-#info .lodging-container {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    margin: 20px;
-}
-
-#info .lodge-quadrant {
-    display: flex;
-    flex-direction: column;
-    align-items: center; /* Center text horizontally */
-    text-align: center;
-    font-family: 'header';
-    color: #5c5442;
-    width: 325px;
-    padding-inline: 20px;
-    padding-block: 5px;
-    margin: 0;
-}
-
-#info .hotels-button {
-    z-index: 100;
-    width: 100%;
-    font-family: 'header';
-    background-color: #fff;
-    color: #5c5442;
-    border: none;
-    padding: 10px 20px;
-    margin: 5px;
-    cursor: pointer;
-    font-size: 1.3rem;
-    transition: background-color 0.3s;
-}
-
-#info .hotels-button:hover {
-    color: #a83c06;
-    font-weight: bolder;
-}
-
-#info .note {
-    font-family: 'Header';
-    color: #5c5442;
-    text-align: center;
-    margin: 0;
-    margin-bottom: 20px;
 }
 
 /* -------------------------- Smaller devices -------------------------- */
