--- a/Styles/registry.css
+++ b/Styles/registry.css
@@ -4,16 +4,15 @@
     align-items: center;
     background-color: #fff;
     padding: 40px;
-    padding-bottom: 0;
 }
 
 #registry h2 {
-    color: #5c5442;
-    font-size: 4rem;
     font-family: 'Header';
-    letter-spacing: 10px;
-    margin: 0;
     text-align: center;
+    color: #5c5442;
+    letter-spacing: 10px;
+    font-size: 4rem;
+    margin: 0;
 }
 
 #registry .registry-container {
@@ -21,17 +20,17 @@
 }
 
 #registry .registry-container p {
+    font-family: 'header';
+    text-align: center;
+    color: #5c5442;
     font-size: 1.3rem;
     line-height: 25pt;
-    font-family: 'header';
-    color: #5c5442;
-    text-align: center;
+    box-shadow: 0 0 10px rgba(168, 60, 6, 0.8);
+    background-color: #fff;
     width: 50%;
     padding: 20px;
     margin: 0 auto;
     margin-block: 40px;
-    box-shadow: 0 0 10px rgba(168, 60, 6, 0.8);
-    background-color: #fff;
 }
 
 #registry .registry-button-container {
@@ -41,22 +40,21 @@
 
 #registry .registry-button {
     font-family: 'Header';
-    background-color: rgba(168, 60, 6, 0.6);
+    cursor: pointer;
     color: #fff;
     border: none;
+    background-color: rgba(168, 60, 6, 0.6);
     border-radius: 8px;
-    padding: 10px 20px;
-    margin: 5px;
-    cursor: pointer;
     font-size: 1rem;
     transition: background-color 0.3s;
+    padding: 10px 20px;
+    margin: 5px;
+    margin-bottom: 0;
 }
 
 #registry .registry-button:hover {
     background-color: #a83c06;
 }
-
-/* -------------------------- Smaller devices -------------------------- */
 
 @media (max-width: 1300px) {
     #registry {
