--- a/Styles/gallery.css
+++ b/Styles/gallery.css
@@ -37,7 +37,7 @@
     text-align: center;
     color: #5c5442;
     margin: 0;
-    margin-bottom: 10px;
+    margin-block: 10px;
 }
 
 #gallery .gallery-button-container {
