--- a/Styles/rsvp.css
+++ b/Styles/rsvp.css
@@ -1,30 +1,19 @@
 #rsvp {
     display: flex;
-    flex-direction: column;
-    align-items: center;
-}
-
-#rsvp .form {
-    position: relative;
-    overflow: hidden;
-    flex: 1;
-    width: 100%;
 }
 
 #rsvp iframe {
-    position: relative;
     z-index: 100;
-    min-width: 100%;
-    max-width: 100%;
-    height: 520px;
+    position: relative;
+    overflow: hidden;
+    width: 100%;
+    height: 600px;
     border: none;
 }
 
-/* -------------------------- Smaller devices -------------------------- */
-
 @media (max-width: 1300px) {
-    #rsvp {
-        padding: 0;
+    #rsvp iframe {
+        height: 520px;
         padding-top: 20px;
     }
 }
