--- a/Styles/story.css
+++ b/Styles/story.css
@@ -55,11 +55,11 @@
 
     #story .story-container {
         width: 100%;
-        padding-bottom: 10px;
     }
 
     #story h2 {
         font-size: 3rem;
+        margin-bottom: 20px;
     }
 
     #story .story-container p {
